@@ -1,3 +1,8 @@
+8 September 2023: Wouter
+	- Fix send of udp retries when ENOBUFS is returned. It stops looping
+	  and also waits for the condition to go away. Reported by Florian
+	  Obser.
+
 25 August 2023: Wouter
 	- Fix compile error on NetBSD in util/netevent.h.
 
